--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "main": "lib/io-client",
     "dependencies": {
         "websocket-client": ">=0.9.5",
-        "socket.io": ">=0.6.0"
+        "socket.io": "0.6"
     }
 }
